[gd_scene load_steps=7 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://arial-unicode-ms.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 44.77, 300 )
z_index = 4
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="ColorRect" parent="CanvasLayer"]
margin_right = 1804.0
margin_bottom = 41.0
color = Color( 0.431373, 0.207843, 0.933333, 0.545098 )

[node name="NativeWord" type="Label" parent="CanvasLayer"]
margin_left = 898.493
margin_right = 1018.49
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Native Text Here"

[node name="Feedback" type="Label" parent="CanvasLayer"]
margin_left = 1500.43
margin_top = -1.94803
margin_right = 1742.43
margin_bottom = 42.052
custom_fonts/font = SubResource( 1 )

[node name="Answer1" type="Label" parent="CanvasLayer"]
margin_left = 1829.89
margin_top = 95.6303
margin_right = 2097.89
margin_bottom = 182.63
custom_fonts/font = SubResource( 2 )
text = "Answer 1"

[node name="Answer2" type="Label" parent="CanvasLayer"]
margin_left = 1831.65
margin_top = 207.801
margin_right = 2099.65
margin_bottom = 294.801
custom_fonts/font = SubResource( 2 )
text = "Answer 1"

[node name="Answer3" type="Label" parent="CanvasLayer"]
margin_left = 1833.65
margin_top = 332.836
margin_right = 2101.65
margin_bottom = 419.836
custom_fonts/font = SubResource( 2 )
text = "Answer 1"

[node name="Answer4" type="Label" parent="CanvasLayer"]
margin_left = 1838.37
margin_top = 466.662
margin_right = 2106.37
margin_bottom = 553.661
custom_fonts/font = SubResource( 2 )
text = "Answer 1"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Lane1" type="ColorRect" parent="ParallaxBackground"]
margin_left = -2.78955
margin_top = 41.0
margin_right = 1797.21
margin_bottom = 191.0
color = Color( 0.917647, 0.235294, 0.235294, 1 )

[node name="Lane2" type="ColorRect" parent="ParallaxBackground"]
margin_top = 191.0
margin_right = 1800.0
margin_bottom = 341.0
color = Color( 0.960784, 0.921569, 0.305882, 1 )

[node name="Lane3" type="ColorRect" parent="ParallaxBackground"]
margin_top = 341.0
margin_right = 1800.0
margin_bottom = 491.0
color = Color( 0.117647, 0.941176, 0.305882, 1 )

[node name="Lane4" type="ColorRect" parent="ParallaxBackground"]
margin_top = 441.0
margin_right = 1800.0
margin_bottom = 591.0
color = Color( 0.109804, 0.411765, 0.933333, 1 )
